# hwc

./: .gitignore
core/hwc/: platformio.ini
core/hwc/src/: config.h  main.cpp
cpcs/: CMakeLists.txt  COM.c  COM.h  README  buildAndRunApplication.sh  include.h  main.c  sensor.c  sensor.h
